[package]
name = "random-rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version="1.38.0", features = ["rt", "macros"] }
ts-rs = "9.0.0"

[[bin]]
name="random-rush-server"
path="rust-src/main.rs"
