[package]
name = "random-rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version="1.38.0", features = ["rt", "macros"] }
ts-rs = "9.0.0"
futures-util = "0.3.30"

[[bin]]
name="random-rush-server"
path="rust-src/main.rs"
