[package]
name = "random-rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.118"}
tokio = { version="1.38.0", features = ["rt", "macros"] }
ts-rs = { version = "9.0.0", features = ["uuid-impl"]}
futures-util = "0.3.30"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[[bin]]
name="random-rush-server"
path="rust-src/main.rs"
